# huginn

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
huginn/: cli.py
huginn/collectors/: dns.py  emails.py  subdomains.py  tech.py  wayback.py  whois.py
huginn/core/: collector.py  models.py
huginn/output/: json_writer.py
tests/: test_dns.py  test_emails.py  test_subdomains.py  test_tech.py  test_wayback.py  test_whois.py
